--- a/index.html
+++ b/index.html
@@ -419,9 +419,9 @@
                 </div>
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">August 2020 bis November 2024</div></div>
-                  <h4>Werkstudent</h4>
+                  <h4>Full-Stack-Entwickler</h4>
                   <p><a href="https://www.beckmann-partner.de" id="service-place">Beckmann & Partner Consult <i class="fas fa-link"></i></a></p>
-                  <i>Konzeptionierung und Realisierung interner Projekte. <br /><div class="spacer"></div> Full-Stack-Entwickler / DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
+                  <i>Konzeptionierung und Realisierung interner Projekte. <br /><div class="spacer"></div> Full-Stack-Entwickler und DevOps-Engineer für RESTful Webservices und deren Architektur.</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2019</div></div>
