--- a/links/index.html
+++ b/links/index.html
@@ -33,7 +33,7 @@
         <div class="row justify-content-center align-self-center mt-3 text-center">
             <div class="col">
                 <h4>Dominik Höhr</h4><div class="w-100"></div>
-                <span>Student</span>
+                <span>Student | DevOps @ CGI</span>
             </div>
         </div>
         <div class="row justify-content-center align-self-center mt-3 text-center">
@@ -50,6 +50,7 @@
         <div class="row justify-content-center align-self-center mt-3 text-center" id="worklinks">
             <a class="link" href="https://de.linkedin.com/in/dominik-hoehr"><i class="fab fa-linkedin fa-2x"></i><label>LinkedIn</label><div></div></a>
             <a class="link" href="https://github.com/hrdominik"><i class="fab fa-github fa-2x"></i><label>GitHub</label><div></div></a>
+            <a class="link" href="https://stackoverflow.com/users/16983494/dominik-h"><i class="fab fa-stack-overflow fa-2x"></i><label>Stack Overflow</label><div></div></a>
             <br />
             <a class="link" href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-2x"></i><label>E-Mail</label><div></div></a>
             <a class="link" href="tel:+491785247697"><div><i class="fa fa-phone-alt fa-2x"></i>   <i class="fab fa-whatsapp fa-2x"></i>  <i class="fab fa-telegram fa-2x"></i></div><label style="margin-left: -91px !important;">Telefonnummer</label><div></div></a>
