update hidden project to carousel

--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
                         <span title="ReactJS"><i class="fab fa-react"></i></span>
                         <span title="Typescript, Javascript"><i class="fab fa-js"></i></span>
                         <span title="Flutter"><i class="fa-solid fa-mobile"></i></span>
+                        <span title="PHP, Wordpress-Plugins"><i class="fab fa-php"></i></span>
                       </div>
                       <h4>Backend</h4>
                       <div class="skill-list">
@@ -189,6 +190,8 @@
                       <div class="skill-list">
                         <span title="SAP"><i class="fab">SAP</i></span>
                         <span title="Data Science, CRISP-DM, R"><i class="fab fa-r-project"></i></span>
+                        <span title="Jupyter, Machine Learning, LLM"><i class="fa-solid fa-table"></i></span>
+                        <span title="Microsoft Powerautomate (ehem. Flow)"><i class="fa-solid fa-desktop"></i></span>
                         <span title="Atlassian Jira Software"><i class="fa-brands fa-jira"></i></span>
                       </div>
                       <h4>Weitere</h4>
@@ -200,15 +203,20 @@
                   </figure>
                 </div>
               </div>
-              <!-- <div class="col heading">
-                <h3>Projekte</h3>
-                <div class="line-dec"></div>
-              </div>
-              <div class="row">
-                <div class="col">
-                  <figure class="skill project">
+            </div>
+          </section>
+
+          <!-- <section class="section projects mt-5" data-section="projects" id="projects">
+            <div class="col heading">
+              <h3>Projekte</h3>
+              <div class="line-dec"></div>
+            </div>
+            <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <figure class="skill project" onclick="window.open('https://git.uni-paderborn.de/asta/raumbuchungen', '_blank')">
                     <div class="heading">
-                      <h4>Raumbuchung</h4>
+                      <h4>Raumbuchung <i class="fas fa-link"></i></h4>
                     </div>
                     <figcaption>
                       <p>
@@ -221,9 +229,11 @@
                       </div>
                     </figcaption>
                   </figure>
-                  <figure class="skill project">
+                </div>
+                <div class="carousel-item">
+                  <figure class="skill project" onclick="window.open('https://github.com/hrdominik/k8-challenge', '_blank')">
                     <div class="heading">
-                      <h4>Kubernetes (local) Challenge</h4>
+                      <h4>Kubernetes (local) Challenge <i class="fas fa-link"></i></h4>
                     </div>
                     <figcaption>
                       <p>
@@ -237,9 +247,11 @@
                       </div>
                     </figcaption>
                   </figure>
-                  <figure class="skill project">
+                </div>
+                <div class="carousel-item">
+                  <figure class="skill project" onclick="window.open('https://git.uni-paderborn.de/asta/semesterticket', '_blank')">
                     <div class="heading">
-                      <h4>Semesterticket</h4>
+                      <h4>Semesterticket <i class="fas fa-link"></i></h4>
                     </div>
                     <figcaption>
                       <p>
@@ -250,7 +262,9 @@
                       </div>
                     </figcaption>
                   </figure>
-                  <figure class="skill project">
+                </div>
+                <div class="carousel-item">
+                  <figure class="skill project" >
                     <div class="heading">
                       <h4>Konferenzverwaltung</h4>
                     </div>
@@ -265,6 +279,8 @@
                       </div>
                     </figcaption>
                   </figure>
+                </div>
+                <div class="carousel-item">
                   <figure class="skill project">
                     <div class="heading">
                       <h4>Inventarverwaltung</h4>
@@ -278,6 +294,8 @@
                       </div>
                     </figcaption>
                   </figure>
+                </div>
+                <div class="carousel-item">
                   <figure class="skill project">
                     <div class="heading">
                       <h4>Beraterprofile</h4>
@@ -294,9 +312,86 @@
                     </figcaption>
                   </figure>
                 </div>
-              </div> -->
+                <div class="carousel-item">
+                  <figure class="skill project" onclick="window.open('https://github.com/hrdominik/scripts', '_blank')">
+                    <div class="heading">
+                      <h4>Verschiedene Skripte <i class="fas fa-link"></i></h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Sammlung von Skripten zur Automatisierung von Prozessen und zur Erleichterung von Aufgaben.
+                      </p>
+                      <div class="skill-list">
+                        <span title="Javascript"><i class="fab fa-js"></i></span>
+                        <span title="Python"><i class="fa-brands fa-python"></i></span>
+                        <span title="Batch"><i class="fa fa-terminal"></i></span>
+                        <span title="HTML"><i class="fab fa-html"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="carousel-item">
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Verschiedene Wordpress-Plugins</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Entwicklung von Wordpress-Plugins zur Erfassung und Verwaltung von Daten mit spezifischen Berechnungen und zur Integration von Drittanbieterdiensten. 
+                      </p>
+                      <div class="skill-list">
+                        <span title="PHP"><i class="fab fa-php"></i></span>
+                        <span title="Javascript"><i class="fab fa-js"></i></span>
+                         <span title="Wordpress"><i class="fab fa-wordpress"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="carousel-item">
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Verschiedene Microsoft Powerautomate Flows</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Automatisierung von Prozessen in Microsoft 365 und Teams. Erstellung von Flows zur Verwaltung von Daten und zur Erleichterung von Aufgaben.
+                      </p>
+                      <div class="skill-list">
+                        <span title="Microsoft Powerautomate (ehem. Flow)"><i class="fa-solid fa-desktop"></i></span>
+                        <span title="Microsoft 365, Teams, Sharepoint"><i class="fab fa-microsoft"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                </div>
+                <div class="carousel-item">
+                  <figure class="skill project">
+                    <div class="heading">
+                      <h4>Verschiedene Webseitenprojekte</h4>
+                    </div>
+                    <figcaption>
+                      <p>
+                        Entwicklung und Verwaltung von Webseiten für verschiedene Zwecke. Von der einfachen Präsentation bis zur komplexen Anwendung.
+                      </p>
+                      <div class="skill-list">
+                        <span title="HTML, CSS"><i class="fab fa-html"></i></span>
+                        <span title="Javascript"><i class="fab fa-js"></i></span>
+                        <span title="Wordpress"><i class="fab fa-wordpress"></i></span>
+                        <span title="Bootstrap"><i class="fab fa-bootstrap"></i></span>
+                      </div>
+                    </figcaption>
+                  </figure>
+                </div>
+              </div>
+              <button class="carousel-control carousel-control-prev" type="button" data-bs-target="#projectsCarousel" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control  carousel-control-next" type="button" data-bs-target="#projectsCarousel" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
             </div>
-          </section>
+          </section> -->
 
           <section class="section cv" data-section="cv" id="cv">
             <div class="container">
