update cgi description

--- a/index.html
+++ b/index.html
@@ -427,7 +427,7 @@
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Dezember 2024</div></div>
                   <h4>DevOps- und Cloud-Engineer</h4>
                   <p><a href="https://www.cgi.com" id="service-place">CGI <i class="fas fa-link"></i></a></p>
-                  <!-- <i><br /><div class="spacer"></div> Werkstudent</i> -->
+                  <i>Entwicklung von leistungsfähigen Cloud-Architekturen mit Fokus auf Sicherheit uns automatisierter Bereitstellung</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
                   <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2024</div></div>
