--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                         Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
                         Insbesondere interessiere ich mich für die System- und Netzwerkarchitektur verteilter Anwendungen.<br /> 
                         <br />
-                        Aktuell studiere ich im 6. Semester des Master of Science Wirtschaftsinformatik und arbeite im IT Consulting.
+                        Aktuell studiere ich im 6. Semester des Master of Science Wirtschaftsinformatik und arbeite als DevOps- und Cloud-Engineer im IT Consulting.
                       </p>
                     </div>
                   </div>
@@ -121,14 +121,18 @@
                 <div class="col heading">
                   <h2>Fertigkeiten & Fähigkeiten</h2>
                   <div class="line-dec"></div>
-                  <p>Ich bin zur Zeit als Full Stack Webentwickler unterwegs. <br /> Dies kann, muss jedoch nicht immer so bleiben.</p>
+                  <p>
+                    Ich bin habe bereits einige Erfahrung in der Softwareentwicklung (Full-Stack) und der Administration komplexer IT-Infrastruktur. Aktuell vertiefe ich meine Fähigkeiten im Bereich als DevOps-Engineer. 
+                    <br />
+                    Einen Überblick über meine Techniken und Methoden finden Sie hier.
+                  </p>
                 </div>
               </div>
               <div class="row">
                 <div class="col-md-6">
                   <figure class="skill">
                     <div class="heading">
-                      <h3>Softwareentwicklung</h3>
+                      <h3>Technische Skills</h3>
                       <div class="line-dec"></div>
                     </div>
                     <figcaption>
@@ -160,7 +164,7 @@
                       <h4>Weitere</h4>
                       <div class="skill-list">
                         <span title="Amazon Web Services (Insb. Amazon Elastic und RDS)"><i class="fa-brands fa-aws"></i></span>
-                        <span title="Microsoft Azure (Insb. Azure Kubernetes Service)"><i class="fab fa-microsoft"></i></span>
+                        <span title="Microsoft Azure (Insb. Azure Kubernetes Service)"><i class="fa fa-cloud"></i></span>
                         <span title="cli (shell und bash)"><i class="fa fa-terminal"></i></span>
                         <span title="Markdown, LaTeX"><i class="fab fa-markdown"></i></span>
                       </div>
@@ -170,7 +174,7 @@
                 <div class="col-md-6">
                   <figure class="skill">
                     <div class="heading" >
-                      <h3>Fachliche Beratung</h3>
+                      <h3>Fachliche Skills</h3>
                       <div class="line-dec"></div>
                     </div>
                     <figcaption>
@@ -201,6 +205,14 @@
                       </div>
                     </figcaption>
                   </figure>
+                </div>
+              </div>
+              <div class="row">
+                <div class="col text-center">
+                  <div class="spacer"></div>
+                  <p>
+                    Nachweise zu meinen Zertifikaten finden Sie bei <a href="https://learn.microsoft.com/de-de/users/dominik-hoehr"><i class="fab fa-microsoft"></i> Microsoft Learn</a><!-- und <a href="https://www.credly.com/users/dominik-hoehr"><i class="fa fa-certificate"></i> Credly</a>-->.
+                  </p>
                 </div>
               </div>
             </div>
