--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                 <div class="col heading">
                   <h1>Über mich, <color>Dominik Höhr</color></h1>
                   <div class="line-dec long-line"></div>
-                  <p>Ich bin Dominik Höhr, <span id="yearOutput"></span> Jahre alt, Student der Wirtschaftsinformatik an der Universität Paderborn.</p>
+                  <p>Ich bin Dominik Höhr, <span id="yearOutput"></span> Jahre alt, Student der Wirtschaftsinformatik an der Universität Paderborn und <br />Cloud- & DevOps-Engineer @ CGI.</p>
                 </div>
               </div>
               <div class="row">
@@ -88,10 +88,10 @@
                   <div class="row">
                     <div class="col">
                       <p>
-                        Interessiert bin ich an der Programmierung und die damit zusammenhängenden Prozesse in den Unternehmen und der Wirtschaft. <br /> 
-                        Insbesondere interessiere ich mich für die System- und Netzwerkarchitektur verteilter Anwendungen.<br /> 
+                        Meine Leidenschaft gilt der Entwicklung moderner, verteilter Systeme und der Automatisierung von Prozessen.<br /> 
+                        Mein Ziel ist es, technische Lösungen nicht nur effizient, sondern auch wirtschaftlich sinnvoll zu gestalten.<br /> 
                         <br />
-                        Aktuell studiere ich im 6. Semester des Master of Science Wirtschaftsinformatik und arbeite als DevOps- und Cloud-Engineer im IT Consulting.
+                        Aktuell studiere ich im 6. Semester des Master of Science Wirtschaftsinformatik und arbeite als Cloud und DevOps-Engineer im IT Consulting.
                       </p>
                     </div>
                   </div>
@@ -413,7 +413,7 @@
                   <div class="line-dec"></div>
                   <span>Aktuell Student und Werkstudent</span>
                   <br /> <br />
-                  <p>Ich suche stetig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden, zu erweitern und Erfahrungen in der Praxis zu sammeln.</p>
+                  <p>Ich suche stetig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden und zu erweitern sowie meine Erfahrungen aus der Praxis gewinnbringend in effizienten Lösungen Umzusetzen.</p>
                 </div>
               </div>
               <div class="row px-5 cv-isotope-selector">
@@ -437,7 +437,7 @@
               <div class="row career">
                 <div class="cv-item work" data-type="work">
                   <div class="cv-head"><div class="service-icon" ><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Dezember 2024</div></div>
-                  <h4>DevOps- und Cloud-Engineer</h4>
+                  <h4>Cloud- und DevOps-Engineer</h4>
                   <p><a href="https://www.cgi.com" id="service-place">CGI <i class="fas fa-link"></i></a></p>
                   <i>Entwicklung von leistungsfähigen Cloud-Architekturen mit Fokus auf Sicherheit und automatisierter Bereitstellung</i>
                 </div>
