fix linkedin link

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             </div>
             <div id="social-links" class="row justify-content-around align-self-center social-icons desktop-only">
               <div class="row justify-content-around align-self-center px-3 social-icons">
-                <a class="col-sm text-center" href="https://de.linkedin.com/in/dominik-h%C3%B6hr"><i class="fab fa-linkedin fa-lg"></i></a>
+                <a class="col-sm text-center" href="https://de.linkedin.com/in/dominik-hoehr"><i class="fab fa-linkedin fa-lg"></i></a>
                 <a class="col-sm text-center" href="https://github.com/hrdominik"><i class="fab fa-github fa-lg"></i></a>
                 <a class="col-sm text-center" href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');"><i class="fa fa-envelope fa-lg"></i></a>
               </div>
@@ -62,7 +62,7 @@
                 <span class="col-sm text-center"><i class="fa fa-map-marker fa-lg"></i> Paderborn</span>
               </div>
             </div>
-            <div id="legal-links" class="row justify-content-around align-self-center mt-3 legal desktop-only">
+            <div id="legal-links" class="row justify-content-around align-self-center mt-3 legal desktop-only" style="font-size: 0.85em;">
               <a class="col" href="./impressum.html">Impressum</a>
               <a class="col" href="./datenschutzerklaerung.html">Datenschutzerklärung</a>
             </div>
