--- a/calendar/index.html
+++ b/calendar/index.html
@@ -19,24 +19,53 @@
 </head>
 
 <body>
-    <div class="page-wraper container">
-        <div class="row">
-            <div class="col heading">
-                <h2>Verfügbare Zeiten</h2>
-                <div class="line-dec"></div>
+    <div class="container page-intro">
+      <div class="row">
+        <div class="col-5">
+            <div id="titel" class="row justify-content-center align-self-center image-round mt-3">
+                <div class="col col-3"><a class="d-flex justify-content-around align-self-center desktop-only-im" href="/"><img src="../static/DHR_squared.png" alt="Dominik, myself as a portrait for business" style="width: 50%; min-width: 60px;" /></a></div>
+                <div id="titel-text" class="text-center col col-9 mt-3">
+                  <h4>Dominik Höhr</h4>
+                  <span>Student | DevOps @ CGI</span>
+                </div>
             </div>
         </div>
+        <div class="col col-7 mt-4" style="text-align: center;">
+            <h2>Verfügbare Zeiten</h2>
+        </div>
+        <div class="line-dec"></div>
+      </div>
+    </div>
+    <div class="page-wraper container">
         <div class="row justify-content-around align-self-center text-center">
             <p>Sehen Sie hier meine verfügbaren Zeiten und treten Sie mit mir in Kontakt.</p>
         </div>
         <div class="row justify-content-center align-self-center text-center">
-            <div class="col">
-                <div class="col-3 link-button">
-                    <a href="https://outlook.live.com/calendar/published/7ec0deea-1538-4e3a-bd55-d0e0ce79ec29/38dc93f1-01a2-41ea-b4d0-20233ec45257/cid-0A3D22DE014FE586/calendar.html">Privat</a>
-                </div> 
-                <div class="col-3 link-button">
-                    <a href="https://outlook.office365.com/calendar/published/fc4d97b7125a4118af2d858b8dbe6ca6@mscloud.uni-paderborn.de/16885f4ec2b846d4bf985973107e02bc9622677838235139292/calendar.html">Geschäftlich</a>   
-                </div> 
+            <div class="accordion col" id="calendar-accordion">
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="calendar-accordion-privat">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#calendar-accordion-privat-collabse" aria-expanded="false" aria-controls="calendar-accordion-privat-collabse">
+                      Privat
+                    </button>
+                  </h2>
+                  <div id="calendar-accordion-privat-collabse" class="accordion-collapse collapse" aria-labelledby="calendar-accordion-privat" data-bs-parent="#calendar-accordion">
+                    <div class="accordion-body">
+                        <iframe src="https://outlook.live.com/calendar/published/7ec0deea-1538-4e3a-bd55-d0e0ce79ec29/38dc93f1-01a2-41ea-b4d0-20233ec45257/cid-0A3D22DE014FE586/calendar.html" frameborder="0" style="width: 100%; height: 750px; zoom: 0.75;"></iframe>
+                    </div>
+                  </div>
+                </div>
+                <div class="accordion-item">
+                  <h2 class="accordion-header" id="calendar-accordion-business">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#calendar-accordion-business-collabs" aria-expanded="false" aria-controls="calendar-accordion-business-collabs">
+                      Geschäftlich
+                    </button>
+                  </h2>
+                  <div id="calendar-accordion-business-collabs" class="accordion-collapse collapse" aria-labelledby="calendar-accordion-business" data-bs-parent="#calendar-accordion">
+                    <div class="accordion-body">
+                        <iframe src="https://outlook.office365.com/calendar/published/fc4d97b7125a4118af2d858b8dbe6ca6@mscloud.uni-paderborn.de/16885f4ec2b846d4bf985973107e02bc9622677838235139292/calendar.html" frameborder="0" style="width: 100%; height: 750px; zoom: 0.75;"></iframe>
+                    </div>
+                  </div>
+                </div>
             </div>
         </div>
         <br /><br />
@@ -48,26 +77,25 @@
         </div>
         <div class="row justify-content-center align-self-center text-center">
         <div class="col">
-            <p>Erreichen können Sie mich wie folgt</p>
-            <div class="col-3 link-button">
-            <a href="javascript:linkTo_UnCryptMailto('nbjmup;epnjojlAipfis/ofu');">dominik [at] hoehr.net</a>
-            </div> oder 
+            <p>Erreichen können Sie mich über</p>
             <div class="col-3 link-button" style="word-wrap: break-word;">
             <a href="../links">weitere Kontakt<wbr>möglichkeiten</a>   
             </div> 
         </div>
         </div>
-        <!-- <div class="row justify-content-around align-self-center mt-3 text-center">
-            <div class="col-8 col-lg-6 link-button"><a id="home" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a></div>        
-        </div> -->
-        <div class="row justify-content-center align-self-center mt-3 text-center" style="position: fixed; bottom: 0; left: 0; width: 100%;">
-            <div class="col">
-                <a href="../impressum.html">Impressum</a>
-            </div>
-            <div class="col">
-                <a href="../datenschutzerklaerung.html">Datenschutzerklärung</a>
-            </div>
-        </div>
     </div>
+    <div class="container page-end">
+      <div class="row justify-content-around align-self-center mt-3 text-center">
+          <div class="col-8 col-lg-5 link-button"><a id="home" href="https://dominik.hoehr.net"> &laquo; Zurück zur Webseite</a></div>        
+      </div>
+      <div class="row justify-content-center align-self-center mt-3 text-center">
+          <div class="col">
+              <a href="../impressum.html">Impressum</a>
+          </div>
+          <div class="col">
+              <a href="../datenschutzerklaerung.html">Datenschutzerklärung</a>
+          </div>
+      </div>
+  </div>
 </body>
 </html>
