--- a/datenschutzerklaerung.html
+++ b/datenschutzerklaerung.html
@@ -59,7 +59,7 @@
                                         <li><a class="index-link" href="#m42">Begriffsdefinitionen</a></li>
                                     </ul>
                                 <h2 id="m3">Verantwortlicher</h2>
-                                    <p>Dominik Höhr<br>Ferdiandstraße 30<br>33102 Paderborn</p>
+                                    <p>Dominik Höhr<br>Lothringer Weg 6A<br>33102 Paderborn</p>
                                     <p>E-Mail-Adresse: <a href="mailto:admin@hoehr.net">admin@hoehr.net</a></p>
                                     <p>Impressum: <a href="https://www.hoehr.net/impressum.html">hoehr.net/impressum.html</a></p>
                                 <h2 id="mOverview">Übersicht der Verarbeitungen</h2>
