--- a/impressum.html
+++ b/impressum.html
@@ -39,7 +39,7 @@
                     <div class="row">
                         <div class="col">
                             <h3>Angaben gemäß § 5 TMG</h3>
-                                <p>Dominik Höhr <br> Ferdiandstraße 30<br> 33102 Paderborn <br></p>
+                                <p>Dominik Höhr<br>Lothringer Weg 6A<br>33102 Paderborn<br></p>
                             <p><strong>Vertreten durch: </strong><br>Dominik Höhr<br></p>
                             <p><strong>Kontakt:</strong> <br>Telefon: 0178-5247697<br>E-Mail: <a href='mailto:admin@hoehr.net'>admin@hoehr.net</a></br></p>
                             <h2>Haftungsausschluss</h2>
