update my volunteer cv

--- a/index.html
+++ b/index.html
@@ -91,14 +91,14 @@
                         Meine Leidenschaft gilt der Entwicklung moderner, verteilter Systeme und der Automatisierung von Prozessen.<br /> 
                         Mein Ziel ist es, technische Lösungen nicht nur effizient, sondern auch wirtschaftlich sinnvoll zu gestalten.<br /> 
                         <br />
-                        Aktuell studiere ich im 6. Semester des Master of Science Wirtschaftsinformatik und arbeite als Cloud und DevOps-Engineer im IT Consulting.
+                        Aktuell studiere ich im 7. Semester des Master of Science Wirtschaftsinformatik und arbeite als Cloud und DevOps-Engineer im IT Consulting.
                       </p>
                     </div>
                   </div>
                   <div class="row">
                     <div class="col">
                       <hr style="background-color: white;" />
-                      <p>Schauen Sie gerne auch auf meinen anderen Online-Profilen vorbei und verschaffen Sie sich einen detaillierten Überblick über mich, meinen bisherigen Werdegang und meine Leistungen.</p>
+                      <p>Schauen Sie gerne auch auf meinen anderen Online-Profilen vorbei und verschaffen Sie sich einen detaillierten Überblick über mich, meinen bisherigen Werdegang und meine Leistungen. <br /> <br /> Aktuell versuche ich mich an einem eigenen Blog und möchte meine Erfahrungen und Erkenntnisse aus den alltäglichen Problemen teilen.</p>
                       <div class="moreContact mt-3">
                         <div class="link-button">
                           <a href="https://de.linkedin.com/in/dominik-hoehr"><i class="fab fa-linkedin"></i> LinkedIn</a>
@@ -106,6 +106,10 @@
                         &nbsp;&nbsp;&nbsp;
                         <div class="link-button">
                           <a href="https://github.com/hrdominik"><i class="fab fa-github"></i> GitHub</a>
+                        </div>
+                        &nbsp;&nbsp;&nbsp;
+                        <div class="link-button">
+                          <a href="/blog"><i class="fas fa-rss"></i> Blog</a>
                         </div>
                       </div>
                     </div>
@@ -122,7 +126,7 @@
                   <h2>Fertigkeiten & Fähigkeiten</h2>
                   <div class="line-dec"></div>
                   <p>
-                    Ich bin habe bereits einige Erfahrung in der Softwareentwicklung (Full-Stack) und der Administration komplexer IT-Infrastruktur. Aktuell vertiefe ich meine Fähigkeiten im Bereich als DevOps-Engineer. 
+                    Ich bin habe bereits einige Erfahrung in der Softwareentwicklung (Full-Stack) und der Administration sowie Optimierung komplexer IT-Infrastruktur. Aktuell vertiefe ich meine Fähigkeiten im Bereich als DevOps-Engineer und dem Design von Cloud-Architekturen.
                     <br />
                     Einen Überblick über meine Techniken und Methoden finden Sie hier.
                   </p>
@@ -221,6 +225,7 @@
           <!-- <section class="section projects mt-5" data-section="projects" id="projects">
             <div class="col heading">
               <h3>Projekte</h3>
+              <i class="hint">Hier finden Sie einen Auszug aus Projekten, an denen ich maßgeblich beteiligt war oder bin; aufgeführt sind ausschließlich Open-Source-Projekte sowie solche, bei denen ich meine Beteiligung veröffentlichen darf und die nicht in Verbindung mit meiner hauptberuflichen Tätigkeit stehen.</i>
               <div class="line-dec"></div>
             </div>
             <div id="projectsCarousel" class="carousel slide" data-bs-ride="carousel">
@@ -411,7 +416,7 @@
                 <div class="col heading">
                   <h2>Erfahrung</h2>
                   <div class="line-dec"></div>
-                  <span>Aktuell Student und Werkstudent</span>
+                  <span>Aktuell Teilzeit als Cloud- und DevOps-Engineer und Student</span>
                   <br /> <br />
                   <p>Ich suche stetig die Gelegenheit die erlernten Inhalte meines Studiums anzuwenden und zu erweitern sowie meine Erfahrungen aus der Praxis gewinnbringend in effizienten Lösungen Umzusetzen.</p>
                 </div>
@@ -448,7 +453,7 @@
                   <i>Kommission für Angelegenheiten des IMT<br/><div class="spacer"></div>Studierendenparlament</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2024</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Juli 2024 bis Juli 2025</div></div>
                   <h4>Ressortleitung IT</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Sicherstellung der IT-Infrastruktur und Support</i>
@@ -478,7 +483,7 @@
                   <i>Geschäftsführung und Durchführung der Firmenkontaktmesse</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Seit Juli 2023</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Juli 2023 bis Juli 2025</div></div>
                   <h4>Mitglied im Vereinsvorstand</h4>
                   <p><a href="https://www.hgwinfo.de" id="service-place">Hochschulgruppe Wirtschaftsinformatik Paderborn e.V. <i class="fas fa-link"></i></a></p>
                   <i></i>
