fix page-wrapper and vh

--- a/assets/error_pages/404_not_found.html
+++ b/assets/error_pages/404_not_found.html
@@ -21,7 +21,7 @@
             background-color: var(--bgColor);
         }
 
-        #page-wraper {
+        #page-wrapper {
             background: var(--bgColor) no-repeat center center fixed;
             -webkit-background-size: cover;
             -moz-background-size: cover;
@@ -99,7 +99,7 @@
 </head>
 
 <body>
-    <div id="page-wraper">
+    <div id="page-wrapper">
         <div class="container">
             <div class="section-heading">
                 <h2>Seite nicht gefunden</h2>
