--- a/calendar/index.html
+++ b/calendar/index.html
@@ -36,7 +36,7 @@
         <div class="line-dec"></div>
       </div>
     </div>
-    <div class="page-wraper container">
+    <div class="page-wrapper container">
         <div class="row justify-content-around align-self-center text-center">
             <p>Sehen Sie hier meine verfügbaren Zeiten und treten Sie mit mir in Kontakt.</p>
         </div>
