--- a/links/index.html
+++ b/links/index.html
@@ -26,7 +26,7 @@
 </head>
 
 <body>
-    <div class="page-wraper container">
+    <div class="page-wrapper container">
         <div class="row justify-content-center align-self-center image-round">
             <img id="userPhoto" src="../static/DHR_squared.png" style="width: 300px;" alt="User Photo">
         </div>
