minor cv update

--- a/index.html
+++ b/index.html
@@ -447,13 +447,13 @@
                   <i>Entwicklung von leistungsfähigen Cloud-Architekturen mit Fokus auf Sicherheit und automatisierter Bereitstellung</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2024</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Oktober 2024 bis Oktober 2025</div></div>
                   <h4>Gewähltes Mitglied <br /><small>in verschiedenen Gremien</small></h4>
                   <p></p>
                   <i>Kommission für Angelegenheiten des IMT<br/><div class="spacer"></div>Studierendenparlament</i>
                 </div>
                 <div class="cv-item work" data-type="work">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Juli 2024 bis Juli 2025</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-briefcase fa-3x"></i></div><div class="service-date">Juli 2024 bis August 2025</div></div>
                   <h4>Ressortleitung IT</h4>
                   <p><a href="https://www.lookin-messe.de" id="service-place">LOOK IN! GbR <i class="fas fa-link"></i></a></p>
                   <i>Sicherstellung der IT-Infrastruktur und Support</i>
@@ -507,7 +507,7 @@
                   <i>Kommission für Angelegenheiten des IMT<br/><div class="spacer"></div>Fakultätsrat der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Fachschaftsvertretung der Fakultät Wirtschaftswissenschaften <br/><div class="spacer"></div>Prüfungsausschuss Wirtschaftsinformatik</i>
                 </div>
                 <div class="cv-item volunteer" data-type="volunteer">
-                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Seit Oktober 2022</div></div>
+                  <div class="cv-head"><div class="service-icon"><i class="fas fa-users fa-3x"></i></div><div class="service-date">Oktober 2022 bis Oktober 2025</div></div>
                   <h4>Gewähltes Mitglied</h4>
                   <p><a href="https://www.fsrwinfo.de" id="service-place">Fachschaftsrat Wirtschaftsinformatik <i class="fas fa-link"></i></a></p>
                 </div>
